--- a/src/main/resources/application.conf
+++ b/src/main/resources/application.conf
@@ -1,6 +1,12 @@
-api {
-  server {
-    ip   = ${?PROXY_HOST}
-    port = ${?PROXY_PORT}
-  }
+proxy.server {
+  ip   = ${?PROXY_HOST}
+  port = ${?PROXY_PORT}
 }
+s3.settings {
+  aws_access_key    = ${?AWS_ACCESS_KEY}
+  aws_secret_key    = ${?AWS_SECRET_KEY}
+  s3_endpoint       = ${?S3_ENDPOINT}
+}
+
+# quiases aws illegal warnings for "/" in authorization header
+akka.http.server.parsing.illegal-header-warnings = off
