Add default parameters for application.conf variables, sbt formatting

--- a/src/main/resources/application.conf
+++ b/src/main/resources/application.conf
@@ -1,11 +1,16 @@
 proxy.server {
-  ip   = ${?PROXY_HOST}
-  port = ${?PROXY_PORT}
+    ip = "localhost"
+    ip = ${?PROXY_HOST}
+    port = 8080
+    port = ${?PROXY_PORT}
 }
 s3.settings {
-  aws_access_key    = ${?AWS_ACCESS_KEY}
-  aws_secret_key    = ${?AWS_SECRET_KEY}
-  s3_endpoint       = ${?S3_ENDPOINT}
+    aws_access_key = "accesskey"
+    aws_access_key = ${?AWS_ACCESS_KEY}
+    aws_secret_key = "secretkey"
+    aws_secret_key = ${?AWS_SECRET_KEY}
+    s3_endpoint = "http://localhost:8010"
+    s3_endpoint = ${?S3_ENDPOINT}
 }
 
 # quiases aws illegal warnings for "/" in authorization header
