Set ranger default config

--- a/src/main/resources/application.conf
+++ b/src/main/resources/application.conf
@@ -13,5 +13,12 @@ s3.settings {
     s3_endpoint = ${?S3_ENDPOINT}
 }
 
+# make sure the service_type is equal to what is specified in
+# ranger-s3-security.xml
+ranger.settings {
+    service_type = "s3"
+    app_id = "s3proxy"
+}
+
 # quiases aws illegal warnings for "/" in authorization header
 akka.http.server.parsing.illegal-header-warnings = off
