Allow bind to interface

--- a/src/main/resources/application.conf
+++ b/src/main/resources/application.conf
@@ -1,6 +1,6 @@
 proxy.server {
-    ip = "localhost"
-    ip = ${?PROXY_HOST}
+    listen_on = "localhost"
+    listen_on = ${?PROXY_HOST}
     port = 8080
     port = ${?PROXY_PORT}
 }
