one proxy endpoint

--- a/src/main/resources/application.conf
+++ b/src/main/resources/application.conf
@@ -9,9 +9,12 @@ s3.settings {
     aws_access_key = ${?AWS_ACCESS_KEY}
     aws_secret_key = "secretkey"
     aws_secret_key = ${?AWS_SECRET_KEY}
-    s3_endpoint = "http://localhost:8010"
     s3_endpoint = ${?S3_ENDPOINT}
+    s3_endpoint_port = ${?S3_ENDPOINT_PORT}
 }
 
 # quiases aws illegal warnings for "/" in authorization header
 akka.http.server.parsing.illegal-header-warnings = off
+
+# temp setting
+akka.http.server.parsing.max-content-length = 1024m
