--- a/src/main/resources/application.conf
+++ b/src/main/resources/application.conf
@@ -4,6 +4,7 @@ proxy.server {
     port = 8080
     port = ${?PROXY_PORT}
 }
+
 s3.settings {
     aws_access_key = "accesskey"
     aws_access_key = ${?AWS_ACCESS_KEY}
@@ -13,5 +14,13 @@ s3.settings {
     s3_endpoint = ${?S3_ENDPOINT}
 }
 
-# quiases aws illegal warnings for "/" in authorization header
-akka.http.server.parsing.illegal-header-warnings = off
+akka {
+    loglevel = INFO
+
+    http {
+        # quiases aws illegal warnings for "/" in authorization header
+        server.parsing.illegal-header-warnings = off
+
+        server.parsing.max-content-length=1000000000
+    }
+}
