--- a/src/main/resources/application.conf
+++ b/src/main/resources/application.conf
@@ -1,17 +1,15 @@
 proxy.server {
-    ip = "localhost"
-    ip = ${?PROXY_HOST}
+    interface = "localhost"
+    interface = ${?PROXY_HOST}
     port = 8080
     port = ${?PROXY_PORT}
 }
 
-s3.settings {
-    aws_access_key = "accesskey"
-    aws_access_key = ${?AWS_ACCESS_KEY}
-    aws_secret_key = "secretkey"
-    aws_secret_key = ${?AWS_SECRET_KEY}
-    s3_endpoint = "http://localhost:8010"
-    s3_endpoint = ${?S3_ENDPOINT}
+s3.server {
+    host = "localhost"
+    host = ${?S3_HOST}
+    port = 8010
+    port = ${?S3_PORT}
 }
 
 akka {
@@ -21,6 +19,8 @@ akka {
         # quiases aws illegal warnings for "/" in authorization header
         server.parsing.illegal-header-warnings = off
 
+        // TODO: remove this entry, better way to support large content using withSizeLimit directive:
+        // https://doc.akka.io/docs/akka-http/current/routing-dsl/directives/misc-directives/withoutSizeLimit.html
         server.parsing.max-content-length=1000000000
     }
 }
