Add request pipeline to akka high level api skeleton

--- a/src/main/resources/application.conf
+++ b/src/main/resources/application.conf
@@ -1,12 +1,12 @@
 proxy.server {
-    interface = "localhost"
+    interface = "0.0.0.0"
     interface = ${?PROXY_HOST}
     port = 8080
     port = ${?PROXY_PORT}
 }
 
 s3.server {
-    host = "localhost"
+    host = "127.0.0.1"
     host = ${?S3_HOST}
     port = 8010
     port = ${?S3_PORT}
