Add forward headers to request and use withoutSizeLimit directive

--- a/src/main/resources/application.conf
+++ b/src/main/resources/application.conf
@@ -19,8 +19,7 @@ akka {
         # quiases aws illegal warnings for "/" in authorization header
         server.parsing.illegal-header-warnings = off
 
-        // TODO: remove this entry, better way to support large content using withSizeLimit directive:
-        // https://doc.akka.io/docs/akka-http/current/routing-dsl/directives/misc-directives/withoutSizeLimit.html
-        server.parsing.max-content-length=1000000000
+        # Enable remote address header to find origin of request
+        server.remote-address-header = on
     }
 }
