Add first working integration test for listing buckets

--- a/src/it/resources/application.conf
+++ b/src/it/resources/application.conf
@@ -1,15 +1,11 @@
 proxy.server {
     interface = "0.0.0.0"
-    interface = ${?PROXY_HOST}
-    port = 8080
-    port = ${?PROXY_PORT}
+    port = 8081
 }
 
 s3.server {
     host = "127.0.0.1"
-    host = ${?S3_HOST}
-    port = 8010
-    port = ${?S3_PORT}
+    port = 8111
 }
 
 akka {
@@ -17,7 +13,7 @@ akka {
 
     http {
         # quiases aws illegal warnings for "/" in authorization header
-        server.parsing.illegal-header-warnings = on
+        server.parsing.illegal-header-warnings = off
 
         # Enable remote address header to find origin of request
         server.remote-address-header = on
