--- a/src/main/resources/application.conf
+++ b/src/main/resources/application.conf
@@ -16,7 +16,7 @@ s3.server {
 # ranger-s3-security.xml
 ranger.settings {
     service_type = "s3"
-    app_id = "s3proxy"
+    app_id = "ceph"
 }
 
 akka {
