--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,7 +1,7 @@
 version: "2"
 services:
   ceph:
-    image: ceph/daemon
+    image: ceph/daemon:latest-mimic
     environment:
       - CEPH_DEMO_UID=ceph-admin
       - CEPH_DEMO_ACCESS_KEY=accesskey
