--- a/src/main/resources/reference.conf
+++ b/src/main/resources/reference.conf
@@ -7,6 +7,11 @@ gargoyle {
 
     ranger {
         # Settings for reaching Ranger.
+
+        # make sure the service_type is equal to what is specified in
+        # ranger-s3-security.xml
+        service_type = "s3"
+        app_id = "testservice"
     }
 
     storage.s3 {
