--- a/src/main/resources/reference.conf
+++ b/src/main/resources/reference.conf
@@ -19,4 +19,9 @@ gargoyle {
         host = "127.0.0.1"
         port = 8010
     }
+
+    sts {
+        host = "127.0.0.1"
+        port = 12345
+    }
 }
