Set new version of STS image and update dependency documents

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -32,7 +32,7 @@ services:
       - "6080:6080"
 
   gargoyle-sts:
-    image: kr7ysztof/gargoyle-sts:aws-cli-alignment
+    image: kr7ysztof/gargoyle-sts:0.0.2
     environment:
       - STS_HOST=0.0.0.0
       - STS_PORT=12345
