Add overwrite possibility for gargoyle parameters in application.conf Rename of some proxy functions to make meaning more clear

--- a/src/main/resources/application.conf
+++ b/src/main/resources/application.conf
@@ -1,3 +1,22 @@
+gargoyle {
+    # Default interface and port to listen on.
+    http {
+        bind = ${?GARGOYLE_HTTP_BIND}
+        port = ${?GARGOYLE_HTTP_PORT}
+    }
+
+    storage.s3 {
+        # Settings for reaching backing storage.
+        host = ${?GARGOYLE_STORAGE_S3_HOST}
+        port = ${?GARGOYLE_STORAGE_S3_PORT}
+    }
+
+    sts {
+        host = ${?GARGOYLE_STS_HOST}
+        port = ${?GARGOYLE_STS_PORT}
+    }
+}
+
 akka {
     loglevel = INFO
 
