--- a/.travis.yml
+++ b/.travis.yml
@@ -16,9 +16,9 @@ env:
 before_script:
 - docker-compose up -d
 - git clone https://github.com/nielsdenissen/wait-for.git
-- ./wait-for/wait-for http://localhost:12345 -t 120
-- ./wait-for/wait-for http://localhost:8010 -t 300
-- ./wait-for/wait-for http://localhost:6080 -t 900
+- ./wait-for/wait-for 127.0.0.1:12345 -t 30
+- ./wait-for/wait-for 127.0.0.1:8010 -t 300
+- ./wait-for/wait-for 127.0.0.1:6080 -t 900
 
 script:
 - sbt ++$TRAVIS_SCALA_VERSION clean coverage test it:test coverageReport
