add list, create bucket ops

--- a/src/main/resources/application.conf
+++ b/src/main/resources/application.conf
@@ -4,7 +4,10 @@ gargoyle {
         bind = ${?GARGOYLE_HTTP_BIND}
         port = ${?GARGOYLE_HTTP_PORT}
     }
-
+    ranger {
+        allow-list-buckets = ${?ALLOW_LIST_BUCKETS}
+        allow-create-buckets = ${?ALLOW_CREATE_BUCKETS}
+    }
     storage.s3 {
         # Settings for reaching backing storage.
         host = ${?GARGOYLE_STORAGE_S3_HOST}
