--- a/src/main/resources/reference.conf
+++ b/src/main/resources/reference.conf
@@ -12,6 +12,8 @@ gargoyle {
         # ranger-s3-security.xml
         service_type = "s3"
         app_id = "testservice"
+        allow-list-buckets = false
+        allow-create-buckets = false
     }
 
     storage.s3 {
