WIP: automatic creation of Users in CEPH when they don't exist yet

--- a/src/main/resources/application.conf
+++ b/src/main/resources/application.conf
@@ -12,6 +12,11 @@ gargoyle {
         # Settings for reaching backing storage.
         host = ${?GARGOYLE_STORAGE_S3_HOST}
         port = ${?GARGOYLE_STORAGE_S3_PORT}
+
+        admin {
+            accesskey = ${?GARGOYLE_STORAGE_S3_ADMIN_ACCESSKEY}
+            secretkey = ${?GARGOYLE_STORAGE_S3_ADMIN_SECRETKEY}
+        }
     }
 
     sts {
