--- a/src/main/resources/reference.conf
+++ b/src/main/resources/reference.conf
@@ -20,6 +20,11 @@ gargoyle {
         # Settings for reaching backing storage.
         host = "127.0.0.1"
         port = 8010
+
+        admin {
+            accesskey = "accesskey"
+            secretkey = "secretkey"
+        }
     }
 
     sts {
