--- a/src/it/resources/application.conf
+++ b/src/it/resources/application.conf
@@ -1,6 +1,7 @@
 gargoyle {
     sts {
         keycloak {
+            token.url = "http://127.0.0.1:8080/auth/realms/auth-gargoyle/protocol/openid-connect/token"
             token.url = ${?GARGOYLE_KEYCLOAK_TOKEN_URL}
         }
     }
