atlas config added and some cleanup

--- a/src/main/resources/reference.conf
+++ b/src/main/resources/reference.conf
@@ -31,4 +31,11 @@ gargoyle {
         host = "127.0.0.1"
         port = 12345
     }
+
+    atlas {
+        host = "127.0.0.1"
+        port = 21000
+        user = "admin"
+        password = "admin"
+    }
 }
