--- a/src/main/resources/application.conf
+++ b/src/main/resources/application.conf
@@ -23,6 +23,13 @@ gargoyle {
         host = ${?GARGOYLE_STS_HOST}
         port = ${?GARGOYLE_STS_PORT}
     }
+
+    atlas {
+        host = ${?GARGOYLE_ATLAS_HOST}
+        port = ${?GARGOYLE_ATLAS_PORT}
+        user = ${?GARGOYLE_ATLAS_USER}
+        password = ${?GARGOYLE_STS_PASSWORD}
+    }
 }
 
 akka {
@@ -35,4 +42,5 @@ akka {
         # Enable remote address header to find origin of request
         server.remote-address-header = on
     }
+
 }
