--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -49,3 +49,8 @@ services:
       - KEYCLOAK_PASSWORD=admin
     ports:
       - "8080:8080"
+
+   atlas:
+      image: arempter/gargoyle-atlas:latest
+      ports:
+        - "21000:21000"
