initial commit for branch

--- a/src/main/resources/application.conf
+++ b/src/main/resources/application.conf
@@ -1,11 +1,14 @@
 gargoyle {
     # Default interface and port to listen on.
     http {
+        bind = "0.0.0.0"
         bind = ${?GARGOYLE_HTTP_BIND}
         port = ${?GARGOYLE_HTTP_PORT}
     }
     ranger {
+        allow-list-buckets = true
         allow-list-buckets = ${?ALLOW_LIST_BUCKETS}
+        allow-create-buckets = true
         allow-create-buckets = ${?ALLOW_CREATE_BUCKETS}
     }
     storage.s3 {
