review comments updated

--- a/src/main/resources/application.conf
+++ b/src/main/resources/application.conf
@@ -28,7 +28,8 @@ gargoyle {
         host = ${?GARGOYLE_ATLAS_HOST}
         port = ${?GARGOYLE_ATLAS_PORT}
         user = ${?GARGOYLE_ATLAS_USER}
-        password = ${?GARGOYLE_STS_PASSWORD}
+        password = ${?GARGOYLE_ATLAS_PASSWORD}
+        enabled = ${?GARGOYLE_ATLAS_ENABLED}
     }
 }
 
