--- a/src/main/resources/reference.conf
+++ b/src/main/resources/reference.conf
@@ -37,6 +37,6 @@ gargoyle {
         port = 21000
         user = "admin"
         password = "admin"
-        enabled = "false"
+        enabled = false
     }
 }
