--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -51,6 +51,6 @@ services:
       - "8080:8080"
 
   atlas:
-    image: arempter/gargoyle-atlas:latest
+    image: arempter/gargoyle-atlas:0.0.1
     ports:
       - "21000:21000"
