cleanup, round 1, no tests

--- a/src/main/resources/application.conf
+++ b/src/main/resources/application.conf
@@ -1,14 +1,11 @@
 gargoyle {
     # Default interface and port to listen on.
     http {
-        bind = "0.0.0.0"
         bind = ${?GARGOYLE_HTTP_BIND}
         port = ${?GARGOYLE_HTTP_PORT}
     }
     ranger {
-        allow-list-buckets = true
         allow-list-buckets = ${?ALLOW_LIST_BUCKETS}
-        allow-create-buckets = true
         allow-create-buckets = ${?ALLOW_CREATE_BUCKETS}
     }
     storage.s3 {
@@ -44,6 +41,8 @@ akka {
 
         # Enable remote address header to find origin of request
         server.remote-address-header = on
+
+        client.parsing.max-content-length = 20000000
     }
 
 }
