adds support for HEAD requests like AWS doesObjectExists

--- a/src/main/resources/application.conf
+++ b/src/main/resources/application.conf
@@ -43,7 +43,8 @@ akka {
         # Enable remote address header to find origin of request
         server.remote-address-header = on
 
-        client.parsing.max-content-length = 20000000
+        # we need to disable head to get translation
+        server.transparent-head-requests = off
     }
 
 }
