--- a/src/main/resources/application.conf
+++ b/src/main/resources/application.conf
@@ -1,8 +1,8 @@
-gargoyle {
+airlock {
     # Default interface and port to listen on.
     http {
-        bind = ${?GARGOYLE_HTTP_BIND}
-        port = ${?GARGOYLE_HTTP_PORT}
+        bind = ${?AIRLOCK_HTTP_BIND}
+        port = ${?AIRLOCK_HTTP_PORT}
     }
     ranger {
         allow-list-buckets = ${?ALLOW_LIST_BUCKETS}
@@ -10,26 +10,26 @@ gargoyle {
     }
     storage.s3 {
         # Settings for reaching backing storage.
-        host = ${?GARGOYLE_STORAGE_S3_HOST}
-        port = ${?GARGOYLE_STORAGE_S3_PORT}
+        host = ${?AIRLOCK_STORAGE_S3_HOST}
+        port = ${?AIRLOCK_STORAGE_S3_PORT}
 
         admin {
-            accesskey = ${?GARGOYLE_STORAGE_S3_ADMIN_ACCESSKEY}
-            secretkey = ${?GARGOYLE_STORAGE_S3_ADMIN_SECRETKEY}
+            accesskey = ${?AIRLOCK_STORAGE_S3_ADMIN_ACCESSKEY}
+            secretkey = ${?AIRLOCK_STORAGE_S3_ADMIN_SECRETKEY}
         }
     }
 
     sts {
-        host = ${?GARGOYLE_STS_HOST}
-        port = ${?GARGOYLE_STS_PORT}
+        host = ${?AIRLOCK_STS_HOST}
+        port = ${?AIRLOCK_STS_PORT}
     }
 
     atlas {
-        host = ${?GARGOYLE_ATLAS_HOST}
-        port = ${?GARGOYLE_ATLAS_PORT}
-        user = ${?GARGOYLE_ATLAS_USER}
-        password = ${?GARGOYLE_ATLAS_PASSWORD}
-        enabled = ${?GARGOYLE_ATLAS_ENABLED}
+        host = ${?AIRLOCK_ATLAS_HOST}
+        port = ${?AIRLOCK_ATLAS_PORT}
+        user = ${?AIRLOCK_ATLAS_USER}
+        password = ${?AIRLOCK_ATLAS_PASSWORD}
+        enabled = ${?AIRLOCK_ATLAS_ENABLED}
     }
 }
 
