added doesObjectExists test and head translation off for it:tests

--- a/src/it/resources/application.conf
+++ b/src/it/resources/application.conf
@@ -6,3 +6,11 @@ airlock {
         }
     }
 }
+
+akka {
+    http {
+        # we need to disable head to get translation
+        server.transparent-head-requests = off
+    }
+
+}
