add a parameter to set a user domain

--- a/src/main/resources/application.conf
+++ b/src/main/resources/application.conf
@@ -7,6 +7,7 @@ airlock {
     ranger {
         allow-list-buckets = ${?ALLOW_LIST_BUCKETS}
         allow-create-buckets = ${?ALLOW_CREATE_BUCKETS}
+        user-domain-postfix = ${?AIRLOCK_RANGER_USER_DOMAIN_POSTFIX}
     }
     storage.s3 {
         # Settings for reaching backing storage.
