--- a/src/main/resources/reference.conf
+++ b/src/main/resources/reference.conf
@@ -14,6 +14,7 @@ airlock {
         app_id = "testservice"
         allow-list-buckets = false
         allow-create-buckets = false
+        user-domain-postfix = ""
     }
 
     storage.s3 {
