allow by default list buckets

--- a/src/main/resources/reference.conf
+++ b/src/main/resources/reference.conf
@@ -12,7 +12,7 @@ airlock {
         # ranger-s3-security.xml
         service_type = "s3"
         app_id = "testservice"
-        allow-list-buckets = false
+        allow-list-buckets = true
         allow-create-buckets = false
         user-domain-postfix = ""
     }
