--- a/src/main/resources/reference.conf
+++ b/src/main/resources/reference.conf
@@ -41,3 +41,24 @@ airlock {
         enabled = false
     }
 }
+
+akka {
+    loglevel = INFO
+
+    http {
+        # quiases aws illegal warnings for "/" in authorization header
+        server.parsing.illegal-header-warnings = off
+
+        # Enable remote address header to find origin of request
+        server.remote-address-header = on
+
+        # we need to disable head to get translation
+        server.transparent-head-requests = off
+
+        # loosens parsing headers settings, letting us to parse AWS headers properly
+        server.raw-request-uri-header = off
+        server.parsing.modeled-header-parsing = off
+        client.parsing.modeled-header-parsing = off
+    }
+
+}
