changes to handle aws v4 signature correctly (assumption RawHeader(User-Agent) is allowed)

--- a/src/main/resources/reference.conf
+++ b/src/main/resources/reference.conf
@@ -59,6 +59,7 @@ akka {
         server.raw-request-uri-header = off
         server.parsing.modeled-header-parsing = off
         client.parsing.modeled-header-parsing = off
+        client.user-agent-header = ""
     }
 
 }
