Additional check to allow creating subfolders in bucket and tests

--- a/.travis.yml
+++ b/.travis.yml
@@ -24,6 +24,8 @@ before_script:
 - bash waitForContainerSetup.sh
 - docker-compose exec ceph radosgw-admin user modify --uid ceph-admin --system
 - docker-compose exec ceph s3cmd put /etc/issue s3://demobucket/subdir/
+- docker-compose exec ceph s3cmd put /etc/issue s3://home/testuser/
+- docker-compose exec ceph s3cmd put /etc/issue s3://home/testuser1/
 
 script:
 - echo "Running pipeline for branch ${TRAVIS_BRANCH}"
