--- a/.travis.yml
+++ b/.travis.yml
@@ -24,6 +24,7 @@ before_script:
 - bash waitForContainerSetup.sh
 - docker-compose exec ceph radosgw-admin user modify --uid ceph-admin --system
 - docker-compose exec ceph s3cmd put /etc/issue s3://demobucket/subdir/
+- docker-compose exec ceph s3cmd mb s3://home
 - docker-compose exec ceph s3cmd put /etc/issue s3://home/testuser/
 - docker-compose exec ceph s3cmd put /etc/issue s3://home/testuser1/
 
