move s3 setup commands to bash script

--- a/.travis.yml
+++ b/.travis.yml
@@ -22,11 +22,7 @@ before_script:
 - sbt ++$TRAVIS_SCALA_VERSION clean compile
 - echo "Wait for containers to be up and running"
 - bash waitForContainerSetup.sh
-- docker-compose exec ceph radosgw-admin user modify --uid ceph-admin --system
-- docker-compose exec ceph s3cmd put /etc/issue s3://demobucket/subdir/
-- docker-compose exec ceph s3cmd mb s3://home
-- docker-compose exec ceph s3cmd put /etc/issue s3://home/testuser/
-- docker-compose exec ceph s3cmd put /etc/issue s3://home/testuser1/
+- bash setupS3Env.sh
 
 script:
 - echo "Running pipeline for branch ${TRAVIS_BRANCH}"
