add kerberos login

--- a/src/main/resources/application.conf
+++ b/src/main/resources/application.conf
@@ -32,4 +32,9 @@ airlock {
         password = ${?AIRLOCK_ATLAS_PASSWORD}
         enabled = ${?AIRLOCK_ATLAS_ENABLED}
     }
+
+    kerberos {
+        keytab = ${?AIRLOCK_KERBEROS_KEYTAB}
+        principal = ${?AIRLOCK_KERBEROS_PRINCIPAL}
+    }
 }
