--- a/src/main/resources/reference.conf
+++ b/src/main/resources/reference.conf
@@ -40,6 +40,11 @@ airlock {
         password = "admin"
         enabled = false
     }
+
+    kerberos {
+        keytab = ""
+        principal = ""
+    }
 }
 
 akka {
