Try to stop and restart atlas as workaround for atlas not being available often

--- a/.travis.yml
+++ b/.travis.yml
@@ -22,6 +22,11 @@ before_script:
 - sbt ++$TRAVIS_SCALA_VERSION clean compile
 - echo "Wait for containers to be up and running"
 - bash waitForContainerSetup.sh
+- echo "Workaround for issue where Atlas is often unavailable"
+- docker-compose stop atlas
+- docker-compose up -d atlas
+- echo "Wait for containers to be up and running"
+- bash waitForContainerSetup.sh
 - bash setupS3Env.sh
 
 script:
