--- a/.travis.yml
+++ b/.travis.yml
@@ -1,3 +1,8 @@
+# In our Travis builds we run the regular tests for Airlock on every push (all branches and PRs)
+# The integration tests that require all dependent docker containers to be started, will only be run on PRs.
+# This is done since the starting of all docker containers (mainly Atlas and Ranger) takes a lot of time.
+# Coverage is only reported on PRs as only then the full coverage with integration tests is known.
+
 sudo: required
 
 services:
@@ -24,8 +29,6 @@ before_script:
     echo "Wait for containers to be up and running";
     bash waitForContainerSetup.sh;
     bash setupS3Env.sh;
-  else
-    echo "This is not a PR, so we won't run integration tests";
   fi
 
 script:
