change the sts host and port configuration to uri

--- a/src/main/resources/application.conf
+++ b/src/main/resources/application.conf
@@ -21,8 +21,7 @@ airlock {
     }
 
     sts {
-        host = ${?AIRLOCK_STS_HOST}
-        port = ${?AIRLOCK_STS_PORT}
+        uri = ${?AIRLOCK_STS_URI}
     }
 
     atlas {
