--- a/src/main/resources/reference.conf
+++ b/src/main/resources/reference.conf
@@ -29,8 +29,7 @@ airlock {
     }
 
     sts {
-        host = "127.0.0.1"
-        port = 12345
+        uri = "http://127.0.0.1:12345"
     }
 
     atlas {
