--- a/src/main/resources/reference.conf
+++ b/src/main/resources/reference.conf
@@ -47,7 +47,9 @@ airlock {
 }
 
 akka {
-    loglevel = INFO
+    loggers = ["akka.event.slf4j.Slf4jLogger"]
+    loglevel = "DEBUG"
+    logging-filter = "akka.event.slf4j.Slf4jLoggingFilter"
 
     http {
         # quiases aws illegal warnings for "/" in authorization header
