adds proper handling for bucket objects containing special characters, like #,!,$ etc.

--- a/src/main/resources/reference.conf
+++ b/src/main/resources/reference.conf
@@ -62,7 +62,8 @@ akka {
         server.transparent-head-requests = off
 
         # loosens parsing headers settings, letting us to parse AWS headers properly
-        server.raw-request-uri-header = off
+        # raw-request is used for AWS signature process, skip akka parsing
+        server.raw-request-uri-header = on
         server.parsing.modeled-header-parsing = off
         client.parsing.modeled-header-parsing = off
         client.user-agent-header = ""
