--- a/src/main/resources/reference.conf
+++ b/src/main/resources/reference.conf
@@ -68,5 +68,17 @@ akka {
         client.parsing.modeled-header-parsing = off
         client.user-agent-header = ""
     }
+    # A comma-separated list of host/port pairs to use for establishing the initial connection to the Kafka cluster
+    kafka.producer {
+        bootstrapServers = "127.0.0.1:9092"
+        createTopic = "create_events"
+        deleteTopic = "delete_events"
+        # defaults from connector
+        parallelism = 100
+        close-timeout = 60s
+        use-dispatcher = "akka.kafka.default-dispatcher"
+        eos-commit-interval = 100ms
+    }
 
 }
+
