refactor proxy api, fix existing tests

--- a/src/main/resources/reference.conf
+++ b/src/main/resources/reference.conf
@@ -70,6 +70,7 @@ akka {
     }
     # A comma-separated list of host/port pairs to use for establishing the initial connection to the Kafka cluster
     kafka.producer {
+        enabled = false
         bootstrapServers = "127.0.0.1:9092"
         createTopic = "create_events"
         deleteTopic = "delete_events"
