integration test updated with embbeded kafka, application.conf added section

--- a/src/main/resources/application.conf
+++ b/src/main/resources/application.conf
@@ -37,3 +37,9 @@ airlock {
         principal = ${?AIRLOCK_KERBEROS_PRINCIPAL}
     }
 }
+akka {
+    kafka.producer {
+        enabled = ${?AIRLOCK_KAFKA_ENABLED}
+        bootstrapServers = ${?AIRLOCK_KAFKA_BOOTSTRAP_SERVERS}
+    }
+}
