final updates and cleanup

--- a/src/main/resources/application.conf
+++ b/src/main/resources/application.conf
@@ -41,5 +41,11 @@ akka {
     kafka.producer {
         enabled = ${?AIRLOCK_KAFKA_ENABLED}
         bootstrapServers = ${?AIRLOCK_KAFKA_BOOTSTRAP_SERVERS}
+        createTopic = ${?AIRLOCK_KAFKA_CREATE_TOPIC}
+        deleteTopic = ${?AIRLOCK_KAFKA_DELETE_TOPIC}
+        parallelism = ${?AIRLOCK_KAFKA_PRODUCER_PARALLELISM}
+        close-timeout = ${?AIRLOCK_KAFKA_PRODUCER_CTIMEOUT}
+        use-dispatcher = ${?AIRLOCK_KAFKA_DISPATCHER}
+        eos-commit-interval = ${?AIRLOCK_KAFKA_PRODUCER_COMMIT_INT}
     }
 }
