--- a/src/main/resources/reference.conf
+++ b/src/main/resources/reference.conf
@@ -74,6 +74,7 @@ kafka.producer {
     enabled = false
     # A comma-separated list of host/port pairs to use for establishing the initial connection to the Kafka cluster
     bootstrapServers = "127.0.0.1:9092"
+    protocol = "PLAINTEXT"
     createTopic = "create_events"
     deleteTopic = "delete_events"
     retries = 3
