additional kafka params for sent message

--- a/src/main/resources/application.conf
+++ b/src/main/resources/application.conf
@@ -47,5 +47,6 @@ kafka.producer {
     retries = ${?AIRLOCK_KAFKA_PRODUCER_RETRIES}
     backoff = ${?AIRLOCK_KAFKA_PRODUCER_BACKOFF}
     backoffMax = ${?AIRLOCK_KAFKA_PRODUCER_BACKOFFMAX}
+    maxblock = ${?AIRLOCK_KAFKA_PRODUCER_MAXBLOCK}
 }
 
