add ranger audit

--- a/src/main/resources/application.conf
+++ b/src/main/resources/application.conf
@@ -8,6 +8,7 @@ airlock {
         allow-list-buckets = ${?ALLOW_LIST_BUCKETS}
         allow-create-buckets = ${?ALLOW_CREATE_BUCKETS}
         user-domain-postfix = ${?AIRLOCK_RANGER_USER_DOMAIN_POSTFIX}
+        enabled-audit = ${?AIRLOCK_RANGER_ENABLED_AUDIT}
     }
     storage.s3 {
         # Settings for reaching backing storage.
