--- a/src/main/resources/reference.conf
+++ b/src/main/resources/reference.conf
@@ -15,6 +15,7 @@ airlock {
         allow-list-buckets = true
         allow-create-buckets = false
         user-domain-postfix = ""
+        enabled-audit = false
     }
 
     storage.s3 {
