add internal token for sts communication

--- a/src/main/resources/application.conf
+++ b/src/main/resources/application.conf
@@ -23,6 +23,7 @@ airlock {
 
     sts {
         uri = ${?AIRLOCK_STS_URI}
+        encodeSecret = ${?AIRLOCK_STS_ENCODE_SECRET}
     }
 
     atlas {
