--- a/src/main/resources/reference.conf
+++ b/src/main/resources/reference.conf
@@ -31,7 +31,7 @@ airlock {
 
     sts {
         uri = "http://127.0.0.1:12345"
-        encodeSecret = "secretKey"
+        encodeSecret = "jwtprivatekey"
     }
 
     atlas {
