--- a/.travis.yml
+++ b/.travis.yml
@@ -46,14 +46,14 @@ after_success:
 - if [ "$TRAVIS_PULL_REQUEST" != "false" -o "${TRAVIS_BRANCH}" == "master" ]; then
     bash <(curl -s https://codecov.io/bash);
   fi
-- export DOCKER_TAG="${TRAVIS_BRANCH/\//_}"
+- export AIRLOCK_VERSION="${TRAVIS_BRANCH/\//_}"
 - echo "$DOCKER_PASSWORD" | docker login -u "$DOCKER_USERNAME" --password-stdin
 - if [ "${TRAVIS_BRANCH}" != "master" ]; then
-    echo "Build image for with name $DOCKER_REPO:$DOCKER_TAG";
+    echo "Build image for with name $DOCKER_REPO:$AIRLOCK_VERSION";
     sbt clean docker:publish;
   fi
 - if [ -n "$TRAVIS_TAG" ]; then
-    docker tag $DOCKER_REPO:$DOCKER_TAG $DOCKER_REPO:latest;
+    docker tag $DOCKER_REPO:$AIRLOCK_VERSION $DOCKER_REPO:latest;
     docker push $DOCKER_REPO:latest;
   fi
 
