- renamed bucketNotification settings - reverted atlas version

--- a/src/main/resources/reference.conf
+++ b/src/main/resources/reference.conf
@@ -73,7 +73,7 @@ akka {
 }
 
 kafka.producer {
-    enabled = false
+    bucketNotificationEnabled = false
     # A comma-separated list of host/port pairs to use for establishing the initial connection to the Kafka cluster
     bootstrapServers = "127.0.0.1:9092"
     protocol = "PLAINTEXT"
