--- a/src/main/resources/application.conf
+++ b/src/main/resources/application.conf
@@ -41,7 +41,7 @@ airlock {
 }
 
 kafka.producer {
-    enabled = ${?AIRLOCK_KAFKA_ENABLED}
+    bucketNotificationEnabled = ${?AIRLOCK_KAFKA_ENABLED}
     bootstrapServers = ${?AIRLOCK_KAFKA_BOOTSTRAP_SERVERS}
     protocol = ${?AIRLOCK_KAFKA_PROTOCOL}
     createTopic = ${?AIRLOCK_KAFKA_CREATE_TOPIC}
