moved bucketEnabled to airlock section

--- a/src/main/resources/application.conf
+++ b/src/main/resources/application.conf
@@ -38,10 +38,11 @@ airlock {
         keytab = ${?AIRLOCK_KERBEROS_KEYTAB}
         principal = ${?AIRLOCK_KERBEROS_PRINCIPAL}
     }
+
+    bucketNotificationEnabled = ${?AIRLOCK_BUCKET_NOTIFY_ENABLED}
 }
 
 kafka.producer {
-    bucketNotificationEnabled = ${?AIRLOCK_KAFKA_ENABLED}
     bootstrapServers = ${?AIRLOCK_KAFKA_BOOTSTRAP_SERVERS}
     protocol = ${?AIRLOCK_KAFKA_PROTOCOL}
     createTopic = ${?AIRLOCK_KAFKA_CREATE_TOPIC}
